--- a/client/executors/list.html
+++ b/client/executors/list.html
@@ -1,11 +1,12 @@
-<template name="deviceList">
+<template name="executorsList">
   <div class="row">
     <div class="col-md-12">
       <div class="panel panel-default panel-block">
         <div class="list-group">
           <div class="list-group-item">
-            <h4>deviceList</h4>
-
+            <h4>executors list</h4>
+            {{> reactiveTable collection=list settings=settings}}
+            <div class="clearfix"></div>
           </div>
         </div>
       </div>
