--- a/client/sensors/list.html
+++ b/client/sensors/list.html
@@ -1,11 +1,12 @@
-<template name="deviceEditor">
+<template name="sensorsList">
   <div class="row">
     <div class="col-md-12">
       <div class="panel panel-default panel-block">
         <div class="list-group">
           <div class="list-group-item">
-            <h4>deviceEditor</h4>
-            {{> quickForm collection=devices id="insertDeviceForm" type="insert" doc=doc}}
+            <h4>sensors list</h4>
+            {{> reactiveTable collection=list settings=settings}}
+            <div class="clearfix"></div>
           </div>
         </div>
       </div>
